# levo

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
CMake/: FindLLVM-Wrapper.cmake
dependencies/: .gitignore  CMakeLists.txt  llvm.cmake  superbuild.cmake  xed.cmake
ghidra_cfg/: ExportCFG.java  README.md
source/: CMakeLists.txt
source/binary/: CMakeLists.txt  main.cpp
source/runtime/: CMakeLists.txt  calling_convention.hpp  ci_string.hpp  execution_manager.hpp  external.hpp  handler_repository.cpp  handler_repository.hpp  handler_utils.hpp  helpers.cpp  libs.hpp  main.cpp  memory.hpp  system.hpp
source/runtime/lib/: kernel32.cpp
source/shared/: CMakeLists.txt  finally.hpp  io.hpp  pe_mapper.cpp  pe_mapper.hpp
